фікс XSS/SQLinjection, додано авторизацію користувача
