# backend/src/routes/auth.routes.ts
@@ -1,0 +1,12 @@
+import { Router } from "express";
+import { AuthController } from "../controllers/auth.controller";
+import { AuthService } from "../services/auth.service";
+
+const router = Router();
+const authService = new AuthService();
+const authController = new AuthController(authService);
+
+router.post("/register", authController.register);
+router.post("/login", authController.login);
+
+export default router;
